--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,5 @@
 
 /*
-* ------------------------------------------------------------------
-*
-* Project: Hantus - Spa and Beauty HTML template
-* Version: 1.0
-* Created : 25/04/2017
-* Template URI: 
-* Author Name: NayraThemes
-* Author URI: http://nayrathemes.com/
-* Description: Spa and Beauty HTML template
-* Developer: Aminul Haque Chowdhury;
-*
-*
-* -------------------------------------------------------------------
-*
 ============================================
 *   [Table of contents]
 * ==========================================
@@ -63,7 +49,9 @@
 ============================================
 */
 
-@import url('https://fonts.googleapis.com/css?family=Dancing+Script:400,700|Rubik:300,400,500,700,900');
+/* @import url('https://fonts.googleapis.com/css?family=Dancing+Script:400,700|Rubik:300,400,500,700,900'); */
+/* @import url('https://fonts.googleapis.com/css?family=Dancing+Script:400,700|Open+Sans:300,300i,400,600,700,700i&display=swap&subset=vietnamese'); */
+@import url('https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,600,700|Dancing+Script:400,700&display=swap&subset=vietnamese');
 @import url('fontawesome-all.min.css');
 @import url('elegant-icons.min.css');
 @import url('bootstrap.min.css');
@@ -520,11 +508,11 @@ img {
     position: relative;
     padding-right: 30px;
     margin-right: 30px;
-    -webkit-transform: translateY(-30%);
-            transform: translateY(-30%);
+    /* -webkit-transform: translateY(-30%);
+            transform: translateY(-30%); */
 }
 
-#header-top p:after {
+/* #header-top p:after {
     content: '';
     position: absolute;
     top: 3px;
@@ -532,7 +520,7 @@ img {
     width: 1px;
     height: 18px;
     background: #cacaca;
-}
+} */
 
 #header-top i {
     margin-right: 6px;
@@ -1430,7 +1418,7 @@ header {
 }
 
 .nav-tabs .nav-item {
-    width: 16.666666666%;
+    width: 25%;
 }
 
 .nav-tabs a.nav-link {
