--- a/assets/css/typography/typograhpy.css
+++ b/assets/css/typography/typograhpy.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Comfortaa', sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 22px;
@@ -11,10 +11,13 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Comfortaa', sans-serif;
     font-weight: 500;
 }
 
+h2{
+    font-family: 'Dancing Script', sans-serif;
+}
 h4 {
     font-size: 20px;
     font-weight: 400;
@@ -26,7 +29,7 @@ h4 {
 }
 
 .section-title p {
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .boxed-btn {
@@ -128,7 +131,7 @@ h4 {
 }
 
 .contact-wrapper .single-contact:hover p {
-    font-size: 20px;
+    font-size: 14px;
     font-weight: 500;
 }
 
@@ -196,7 +199,7 @@ h4 {
 #counter .single-box h3 {
     font-size: 40px;
     font-weight: 700;
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Comfortaa', cursive;
 }
 
 #counter .single-box p {
@@ -279,7 +282,7 @@ h4 {
 }
 
 #subscribe p {
-    font-size: 16px;
+    font-size: 14px;
 }
 
 #subscribe-form button {
