--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@
 
 /* @import url('https://fonts.googleapis.com/css?family=Dancing+Script:400,700|Rubik:300,400,500,700,900'); */
 /* @import url('https://fonts.googleapis.com/css?family=Dancing+Script:400,700|Open+Sans:300,300i,400,600,700,700i&display=swap&subset=vietnamese'); */
-@import url('https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,600,700|Dancing+Script:400,700&display=swap&subset=vietnamese');
+@import url('https://fonts.googleapis.com/css?family=Comfortaa:300,400,500  ,600,700|Dancing+Script:400,700&display=swap&subset=vietnamese');
 @import url('fontawesome-all.min.css');
 @import url('elegant-icons.min.css');
 @import url('bootstrap.min.css');
@@ -633,6 +633,7 @@ img {
     position: relative;
     -webkit-transition: .3s all;
     transition: .3s all;
+    font-weight: 600;
 }
 
 .main-menu li.c-dropdowns.active li a {
