--- a/assets/css/typography/typograhpy.css
+++ b/assets/css/typography/typograhpy.css
@@ -16,7 +16,7 @@ h6 {
 }
 
 h2{
-    font-family: 'Dancing Script', sans-serif;
+    font-family: 'Comfortaa', sans-serif;
 }
 h4 {
     font-size: 20px;
