--- a/assets/css/typography/typograhpy.css
+++ b/assets/css/typography/typograhpy.css
@@ -17,6 +17,7 @@ h6 {
 
 h2{
     font-family: 'Comfortaa', sans-serif;
+    font-weight: 700;
 }
 h4 {
     font-size: 20px;
@@ -144,7 +145,8 @@ h4 {
 .tab-content ul li h4 .price {
     font-size: 20px;
     font-weight: 700;
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Comfortaa', cursive;
+    font-style: italic;
 }
 
 .feature-icon {
